--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/about-Winds.jpg      # use absolute URL, seeing it's used i
 # SNS settings
 RSS: false
 weibo_username:     asfuyao
-zhihu_username:     Winds
+zhihu_username:     xwinds
 github_username:    asfuyao
 #facebook_username:  asfuyao
 jianshu_username:   aaa39fc459b0
