--- a/_config.yml
+++ b/_config.yml
@@ -99,16 +99,10 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
+        title: "KoolShare",
+        href: "http://koolshare.cn/portal.php"
     },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
+        title: "C++爱好者",
+        href: "http://www.cppfans.com/"
     }
 ]
